parser.output
Grammar

    0 $accept: tokenlist $end

    1 tokenlist: tokenlist token
    2          | token

    3 token: constant
    4      | mulop
    5      | sumop
    6      | ops

    7 sumop: '+'
    8      | '-'

    9 mulop: '*'
   10      | '/'
   11      | '%'

   12 ops: '<'
   13    | '>'
   14    | '('
   15    | ')'
   16    | '['
   17    | ']'
   18    | ':'
   19    | ';'
   20    | ','
   21    | '?'
   22    | '='

   23 constant: BOOLCONST
   24         | ID
   25         | NUMCONST
   26         | CHARCONST
   27         | STRINGCONST


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 11
    '(' (40) 14
    ')' (41) 15
    '*' (42) 9
    '+' (43) 7
    ',' (44) 20
    '-' (45) 8
    '/' (47) 10
    ':' (58) 18
    ';' (59) 19
    '<' (60) 12
    '=' (61) 22
    '>' (62) 13
    '?' (63) 21
    '[' (91) 16
    ']' (93) 17
    error (256)
    BOOLCONST <tokenData> (258) 23
    ID <tokenData> (259) 24
    NUMCONST <tokenData> (260) 25
    CHARCONST <tokenData> (261) 26
    STRINGCONST <tokenData> (262) 27


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    tokenlist (25)
        on left: 1 2
        on right: 0 1
    token (26)
        on left: 3 4 5 6
        on right: 1 2
    sumop (27)
        on left: 7 8
        on right: 5
    mulop (28)
        on left: 9 10 11
        on right: 4
    ops (29)
        on left: 12 13 14 15 16 17 18 19 20 21 22
        on right: 6
    constant (30)
        on left: 23 24 25 26 27
        on right: 3


State 0

    0 $accept: . tokenlist $end

    BOOLCONST    shift, and go to state 1
    ID           shift, and go to state 2
    NUMCONST     shift, and go to state 3
    CHARCONST    shift, and go to state 4
    STRINGCONST  shift, and go to state 5
    '+'          shift, and go to state 6
    '-'          shift, and go to state 7
    '*'          shift, and go to state 8
    '/'          shift, and go to state 9
    '%'          shift, and go to state 10
    '<'          shift, and go to state 11
    '>'          shift, and go to state 12
    '('          shift, and go to state 13
    ')'          shift, and go to state 14
    '['          shift, and go to state 15
    ']'          shift, and go to state 16
    ':'          shift, and go to state 17
    ';'          shift, and go to state 18
    ','          shift, and go to state 19
    '?'          shift, and go to state 20
    '='          shift, and go to state 21

    tokenlist  go to state 22
    token      go to state 23
    sumop      go to state 24
    mulop      go to state 25
    ops        go to state 26
    constant   go to state 27


State 1

   23 constant: BOOLCONST .

    $default  reduce using rule 23 (constant)


State 2

   24 constant: ID .

    $default  reduce using rule 24 (constant)


State 3

   25 constant: NUMCONST .

    $default  reduce using rule 25 (constant)


State 4

   26 constant: CHARCONST .

    $default  reduce using rule 26 (constant)


State 5

   27 constant: STRINGCONST .

    $default  reduce using rule 27 (constant)


State 6

    7 sumop: '+' .

    $default  reduce using rule 7 (sumop)


State 7

    8 sumop: '-' .

    $default  reduce using rule 8 (sumop)


State 8

    9 mulop: '*' .

    $default  reduce using rule 9 (mulop)


State 9

   10 mulop: '/' .

    $default  reduce using rule 10 (mulop)


State 10

   11 mulop: '%' .

    $default  reduce using rule 11 (mulop)


State 11

   12 ops: '<' .

    $default  reduce using rule 12 (ops)


State 12

   13 ops: '>' .

    $default  reduce using rule 13 (ops)


State 13

   14 ops: '(' .

    $default  reduce using rule 14 (ops)


State 14

   15 ops: ')' .

    $default  reduce using rule 15 (ops)


State 15

   16 ops: '[' .

    $default  reduce using rule 16 (ops)


State 16

   17 ops: ']' .

    $default  reduce using rule 17 (ops)


State 17

   18 ops: ':' .

    $default  reduce using rule 18 (ops)


State 18

   19 ops: ';' .

    $default  reduce using rule 19 (ops)


State 19

   20 ops: ',' .

    $default  reduce using rule 20 (ops)


State 20

   21 ops: '?' .

    $default  reduce using rule 21 (ops)


State 21

   22 ops: '=' .

    $default  reduce using rule 22 (ops)


State 22

    0 $accept: tokenlist . $end
    1 tokenlist: tokenlist . token

    $end         shift, and go to state 28
    BOOLCONST    shift, and go to state 1
    ID           shift, and go to state 2
    NUMCONST     shift, and go to state 3
    CHARCONST    shift, and go to state 4
    STRINGCONST  shift, and go to state 5
    '+'          shift, and go to state 6
    '-'          shift, and go to state 7
    '*'          shift, and go to state 8
    '/'          shift, and go to state 9
    '%'          shift, and go to state 10
    '<'          shift, and go to state 11
    '>'          shift, and go to state 12
    '('          shift, and go to state 13
    ')'          shift, and go to state 14
    '['          shift, and go to state 15
    ']'          shift, and go to state 16
    ':'          shift, and go to state 17
    ';'          shift, and go to state 18
    ','          shift, and go to state 19
    '?'          shift, and go to state 20
    '='          shift, and go to state 21

    token     go to state 29
    sumop     go to state 24
    mulop     go to state 25
    ops       go to state 26
    constant  go to state 27


State 23

    2 tokenlist: token .

    $default  reduce using rule 2 (tokenlist)


State 24

    5 token: sumop .

    $default  reduce using rule 5 (token)


State 25

    4 token: mulop .

    $default  reduce using rule 4 (token)


State 26

    6 token: ops .

    $default  reduce using rule 6 (token)


State 27

    3 token: constant .

    $default  reduce using rule 3 (token)


State 28

    0 $accept: tokenlist $end .

    $default  accept


State 29

    1 tokenlist: tokenlist token .

    $default  reduce using rule 1 (tokenlist)
